fixed alignment for clients with super duper long names

--- a/src/sass/app/metatrader.scss
+++ b/src/sass/app/metatrader.scss
@@ -172,6 +172,7 @@
 
         .acc-info {
             font-size: $FONT_SIZE_S;
+            word-wrap: break-word;
 
             .balance {
                 font-size: $FONT_SIZE_XXL;
